Remove code snippet numbering

--- a/R-package-catalogue.Rmd
+++ b/R-package-catalogue.Rmd
@@ -67,7 +67,7 @@ Accelerometer data need considerable pre-processing before final analyses can be
 GENEActive, sold by Activinsights, is a wrist-worn tri-axial accelerometer that is often used in clinical research studies. With package ***GENEAread*** [@R_GENEAread], raw data can be imported into R for further processing, as illustrated below.    
 
 ```{r out.with = "100%", fig.asp = .4, fig.cap = "Raw sensor data of a GENEActive wrist-worn tri-axial accelerometer (down-sampled from 100Hz to 5Hz).", message = FALSE, warning = FALSE}
-# Code snippet 15.1: Reading raw sensor data.
+# Reading raw GENEActive data.
 library(GENEAread)
 library(tidyr)
 
@@ -98,7 +98,7 @@ Package *GGIR* [@R-GGIR] is a package to pre-process raw accelerometry data from
 Package ***'PhysicalActivity'*** [@R-PhysicalActivity] provides an alternative to package 'GGIR', when ActiGraph data are available.
 
 ```{r fig15a, fig.cap="Activity Counts (5-minute windows), in a Three-day Accelerometer data set.", out.width = "100%", fig.asp = .4}
-# Code snippet 15.2: plotting activity counts.
+# Plotting activity counts.
 library(PhysicalActivity)
 library(ggplot2)
 
@@ -122,7 +122,7 @@ The tidyverse is a collection of well-designed packages, authored by the team be
 Package ***'dplyr'*** [@R-dplyr] implements the 'split-apply-combine'-strategy. With 'dplyr', elementary data manipulations can be e chained (using the pipe operator '%>%') to elegantly implement complex data transformations. 
 
 ```{r cs15c}
-# Code snippet 15.3: aggregate data by ID, through a 'pipe'.
+# Aggregate data by ID, through a 'pipe'.
 require(dplyr)
 
 d <- data.frame(
@@ -145,7 +145,7 @@ Package ***'ggplot2*** [@wickham2016ggplot2] provides a collection of high-level
 The example below illustrates how graphs are layered. In the first step, a coordinate system is set up. In step 2, all time/scores points are plotted. In step 3, a smoothed line is fitted through these points. Finally, in step 4, the graph is split on a variable ID (a subject identifier), to show individual trajectories.
 
 ```{r cs15d, fig.cap = "Plotting layers with ggplot2", out.width = '45%', fig.asp = .4, fig.show = "hold"}
-# Code snippet 15.4: simple ggplot example.
+# Simple ggplot example.
 library(ggplot2)
 
 # simulate example data 
@@ -175,7 +175,7 @@ g + facet_wrap(~ ID)
 With package ***haven*** [@R-haven], SPSS, STATA and SAS files can be read into R.
 
 ```{r cs15e}
-# Code snippet 15.5: read SPSS data
+# Read SPSS data
 library(haven)
 
 path <- system.file("examples", "iris.sav", package = "haven")
@@ -193,7 +193,7 @@ EMA data analyses frequently require manipulations of datetime variables. For th
 In the code snippet below, for example, the 'round_date' function is used to calculate the ENMO value from raw tri-axial accelerometer data, in 15-minute epoch windows.
 
 ```{r cs15f}
-# code snippet 15.6: rounding dates.
+# Rounding dates.
 library(emaph)
 library(lubridate)
 library(ggplot2)
@@ -225,7 +225,7 @@ Several R-packages for mixed-effects modelling exist. The most popular are packa
 Package **nlme** is introduced in Chapter \@ref(lmm). It is an older package (in comparison to package lme4), that is still used a lot because it provides options to model correlational structures that are not implemented (yet) in lme4.
 
 ```{r cs15g, nlme_example}
-# Code snippet 15.7: fit a linear mixed model, with lme.
+# Fit a linear mixed model, with lme.
 library(nlme)
 fm <- lme(distance ~ age + Sex, data = Orthodont, random = ~ 1)
 
@@ -238,7 +238,7 @@ fixef(fm)
 Package **lme4** [@Bates2015] is a faster R-reimplementation of the mixed-effects model. With large data sets and complex hierarchical models, this package should probably be preferred. As can be seen below, model specifications in 'lmer' are different from model specifications in 'lme'. 
 
 ```{r cs15h, lme4_example, eval = TRUE}
-# Code snippet 15.8: fit a linear mixed model, with lme.
+# Fit a linear mixed model, with lme.
 library(lme4)
 fm <- lmer(distance ~ age + Sex + (1 | Subject), data = Orthodont)
 
@@ -253,7 +253,7 @@ fixef(fm)
 With package 'simr' [@Green2016], power of mixed-effects models can be determined via simulation. As illustrated below, the procedure requires the researcher to define the "true" parameters of a mixed model, and a single data set. Then, function 'simPower' can be used to simulate new datasets and tests (of a specified parameter in the model), to determine the power of the test. 
 
 ```{r cs15i}
-# Code snippet 15.9: Power analysis of a two-group repeated measures design
+# Power analysis of a two-group repeated measures design
 # (simulation approach).
 library(simr)
 
@@ -304,7 +304,7 @@ Vector autoregressive (VAR) models can be used to detect lagged relationships be
 In the (unrealistic) example below, function 'autovar' is used to detect that changes in depression are positively related to past (lag 1) values of activity, in a simulated data set: 
 
 ```{r cs15k, eval = TRUE}
-# Code snippet 15.11: autovar analysis.
+# Autovar analysis.
 library(autovarCore)
 
 # simulate data
@@ -333,7 +333,7 @@ Package ***qgraph*** [@Epskamp2012] can be used to fit, visualize and analyze gr
 In the example below, qgraph is used to fit a network on the 'Critical Slowing Down' (CSD) data set, which is included in package 'emaph' (see Chapter \@ref(csd) and Chapter \@ref(networks)). 
 
 ```{r cs15l, out.width = "100%", fig.asp = .4, message = FALSE, warning = FALSE, fig.cap="Network of mood items from CSD data set"}
-# Code snippet 15.12:  fitting a network with qgraph.
+# Fitting a network, with qgraph.
 
 library(qgraph)
 library(emaph)
@@ -362,7 +362,7 @@ In the interpretation of fitted network plots, it is important to take the stabi
 Below, the stability of the network that was fit in the previous example is examined with bootnet: fifty networks are fit, based on fifty bootstrapped samples. In the results plot, the red line marks the strength of the edges in the full sample, while grey confidence intervals mark the distribution of the edge weights in the bootstraps. 
 
 ```{r cs15m, out.width = "100%", fig.asp = .4}
-# Code snippet 15.13: a bootstrapped network. 
+# A bootstrapped network. 
 library(bootnet)
 
 g <- estimateNetwork(d, default = "EBICglasso",
@@ -380,7 +380,7 @@ plot(results, order = "mean")
 Disturbances in circadian rhythms have been related to depressive symptoms [see, e.g., @Saeb2015]. With so-called periodograms, these circadian rhythms can be detected in EMA data. Standard analysis techniques, however, expect regular timeseries, in which data are sampled at equidistant intervals. EMA data, typically, are not equidistant. One solution to this problem is to use the Lomb-Scargle periodogram procedure [@Lomb1976], which can be applied to unevenly-sampled timeseries as well. Package ***lomb*** [@ruf1999] implements this procedure.
 
 ```{r cs15n, out.width='98%'}
-# Code snippet 15.14: calculating a Lomb-Scargle periodogram.
+# Calculating a Lomb-Scargle periodogram.
 data(ibex, package = "lomb") 
 lomb::lsp(ibex[2:3]) 
 ```
