--- a/csd.Rmd
+++ b/csd.Rmd
@@ -1,4 +1,4 @@
-# (PART) EMA Case Studies {-}
+# (PART) A Case Study {-}
 
 # Early Warning Signs of Depression {#csd}
 
@@ -36,7 +36,7 @@ going to use several functions from the tidyverse.
 - DFA is implemented in package 'nonlinearTseries', so we will need that as well.
 
 ```{r cs11a}
-# Code snippet 11.1: required libraries for the CSD-study re-analysis.
+# Required libraries for the CSD-study re-analysis.
 library(emaph)
 library(tidyverse)
 library(nonlinearTseries)
@@ -50,7 +50,7 @@ Let's take a look at the development of the depressive symptoms of the patient f
 The code below reconstructs Figure 1 of the Wichers et al article. It plots the SCL90-R depression scale score over the time. Around day 120, the depression score increased considerable: the patient experienced a relapse.
 
 ```{r cs11b, out.width = "100%", fig.cap = "SCL-90 depression score, over the study period", fig.asp = .3}
-# Code snippet 11.2: Plot depression score.
+# Plot depression score.
 dep <- csd %>% select(dayno, scl90r_dep) %>%
   filter(!is.na(scl90r_dep)) %>% unique
 
@@ -68,7 +68,7 @@ items), mental unrest (mu; 3 items), suspiciousness (su; 1 item), and worrying
 (wo; 1 item). From these factors, an overall mental state sum score can be calculated.
 
 ```{r cs13c}
-# Code snippet 11.3: mood states calculation.
+# Mood states calculation.
 
 # positive affect
 pa_items <- c("mood_enthus", "mood_cheerf",
@@ -105,7 +105,7 @@ csd$ms <- rowSums(csd[c("pa", "na", "mu", "su", "wo")])
 Rows, in which one or more of the factors have missing values, are removed from the analysis. In a full analysis, options to impute the missing values could and should be considered. However, since only 3 of the 1476 rows have missing item scores, not much is probably lost by running a simple complete-case analysis.
 
 ```{r cs11d}
-# Code snippet 11.4: missing value removal.
+# Missing values removal.
 
 # count number of items with missing items, per row
 csd$nna <- csd %>%
@@ -120,7 +120,7 @@ csd <- csd %>% filter(nna == 0)
 ## Running the DFA
 
 ```{r cs11e}
-# Code snippet 11.5: Running the DFA.
+# Running the DFA.
 
 # prepare result rows: one row for each day
 d <- NULL
@@ -161,7 +161,7 @@ We can now plot the DFA indicator over time, to see whether it peaks prior to th
 
 
 ```{r cs11f, eval = TRUE, out.width = "100%", fig.asp = .4, fig.cap = "Results of the DFA analysis.", warning = FALSE}
-# Code snippet 11.6: Plot DFA results.
+# Plot DFA results.
 ggplot(na.omit(d),
       aes(x = dayno, y = ms_dfa, 
           colour = factor(dayno < 120), 
