--- a/features.Rmd
+++ b/features.Rmd
@@ -1,97 +1,9 @@
-```{r include=FALSE, cache=FALSE}
-# # Reproducibility --------------------------------------------------------------
-# 
-# # fix random numbers
-# set.seed(1014)
-# 
-# 
-# # knitr chunk options ----------------------------------------------------------
-# 
-knitr::opts_chunk$set(
-  comment = "#>",
-  collapse = TRUE,
-  cache = FALSE,
-  out.width = "98%",
-  fig.align = 'center',
-  fig.width = 7,
-  fig.asp = 0.5,  # was: 0.618 (1 / phi)
-  fig.show = "hold",
-  message = FALSE,
-  warning = FALSE
-)
-# 
-# options(width = 120)
-# 
-# 
-# # standard libraries -----------------------------------------------------------
-library(ggplot2)
-library(emaph)
-# 
-# 
-# # theming ----------------------------------------------------------------------
-# 
-# # avoid long pint-out of numeric variables
-# #options(digits = 3)
-# 
-# # avoid long print-outs of tables
-# #options(dplyr.print_min = 6, dplyr.print_max = 6)
-# 
-# # common theme of all ggplot images
-# #theme_set(theme_bw(12))
-# 
-# 
-```
-```{r include=FALSE, cache=FALSE}
-# # Reproducibility --------------------------------------------------------------
-# 
-# # fix random numbers
-# set.seed(1014)
-# 
-# 
-# # knitr chunk options ----------------------------------------------------------
-# 
-knitr::opts_chunk$set(
-  comment = "#>",
-  collapse = TRUE,
-  cache = FALSE,
-  out.width = "98%",
-  fig.align = 'center',
-  fig.width = 7,
-  fig.asp = 0.5,  # was: 0.618 (1 / phi)
-  fig.show = "hold",
-  message = FALSE,
-  warning = FALSE
-)
-# 
-# options(width = 120)
-# 
-# 
-# # standard libraries -----------------------------------------------------------
-library(ggplot2)
-library(emaph)
-# 
-# 
-# # theming ----------------------------------------------------------------------
-# 
-# # avoid long pint-out of numeric variables
-# #options(digits = 3)
-# 
-# # avoid long print-outs of tables
-# #options(dplyr.print_min = 6, dplyr.print_max = 6)
-# 
-# # common theme of all ggplot images
-# #theme_set(theme_bw(12))
-# 
-# 
-```
 
 # (PART) Analytic Approaches {-}
 
 # Feature Extraction {#features}
 
-EMA data are streams: time-series that represent processes that may span hours, days, weeks or even months. To the beginning EMA researcher, it may not be immediately clear how to deal with these data. How can these series be summarized to study differences between individuals or changes within individuals over time? What 'qualities' or 'features' of a time-series should be considered? What are the available options? 
-
-In this chapter, we will discuss some of the features that can be extracted from EMA time-series.
+EMA data are streams: time-series that represent processes which may span hours, days, weeks or even months. To the EMA researcher, it may not be immediately clear how to deal with these data. How, for example, can these series be summarized to study differences between individuals or changes within individuals over time? What 'qualities' or 'features' of a time-series should be considered? What are the available options? In this chapter, we will discuss some of the features that can be extracted from EMA time-series.
 
 ## Simulated EMA Time-series Example
 
@@ -111,7 +23,7 @@ library(psych)
 set.seed(123)
 n_measurements_per_day <- 5 
 n_days <- 21
-n = n_measurements_per_day * (n_days)
+n <- n_measurements_per_day * (n_days)
 m <- 3
 sdev_min <- 1
 sdev_max <- 4
@@ -242,17 +154,9 @@ ggplot(p, aes(x = as.numeric(Var1), y = Freq * 100)) +
   theme_bw() + theme(panel.grid.minor = element_blank())
 ```
 
-Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit [@hoogendoorn2017_book]. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit
+Now that we now that missing values are present, an new question arises: how should we deal with missing values? You can choose to ignore the missing values, or to replace the missing values with plausible values. Some analysis techniques, such as mixed modelling, do not require imputation, which is good. Others techniques, however, are intolerant to missing values. If you need to impute, there are several options. One can choose to replace missing values with the mean, the last-known value, an interpolated value or use a smoothing technique in which missing values are automatically replaced, such as the kalman-filter [see @hoogendoorn2017_book, for a discussion of these techniques]. Figure \@ref(fig:fig8f) illustrates the linear interpolation approach: missing values (marked by red dots) are replaced by values that lie between the non-missings.  
 
-Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit
-
-```{r echo = FALSE, out.width = "100%", fig.asp = .3}
+```{r fig8f, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "EMA time series, with missing values (red) imputed through interpolation."}
 # Imputation through interpolation 
 impute_interpolation <- function(x) {
   require(zoo)
@@ -281,29 +185,20 @@ ggplot(d, aes(x = t, y = s_imputed)) +
 
 ## Autocorrelation
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.
+When a series is correlated with delayed copyies of itself, we say that it is autocorrelated. In repeated measurements of natural phenomena, this autocorrelation can often be found. The temperature of today is correlated with the temperature of recent days. Similarly, EMA mood ratings, taken at time t, are typically correlated with ratings taken at t-1, t-2, etc. This is illustrated in Figure \@ref(fig:fig8g). 
+Studying the autocorrelation of a timeseries can be very revealing, as illustrated by the autocorrelation plot in Figure \@ref(fig:fig8g), in which the correlation of the EMA mood series with itself is plotted, for various delays (or 'lags' as these delays are called). First, the plot reveals that observations are correlated with previous values at lag 1: this series is autocorrelated. Second, there appears to be a pattern in the correlations at later lags: positive and negative correlations alternate, in a pattern that seems to reflect periodicity.   
 
-```{r echo = FALSE, out.width = "100%", fig.asp = .4}
+```{r fig8g, echo = FALSE, out.width = "100%", fig.asp = .5, fig.cap = "Autocorrelation plot of the EMA mood series."}
 acf(e$s, type = "partial", lag.max = 35)
 ```
 
 ### Rolling statistics
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra [@vanBreda2016].
+From the autocorrelation analysis, we learned that describing the EMA series as a simple trend might be too simplistic. The mean does not increase in a simple linear fashion. There seems to be a periodic component in the series as well: increases in the mean are followed by decreases. 
 
-```{r echo = FALSE, out.width = "100%", fig.asp = .4}
+In the plot of the raw series, this is not immediately clear. However, if we "smooth" the series, by calculating the mean as it develops over time, the periodicity in the series is becoming more clear. Figure \@ref(fig:fig8h) illustrates this.
+
+```{r fig8h, echo = FALSE, out.width = "100%", fig.asp = .3}
 d$rolling_mean <-
   as.numeric(
     zoo::rollapply(
@@ -327,50 +222,12 @@ ggplot(e, aes(x = t, y = rolling_mean)) +
 
 ```
 
-```{r echo = FALSE, out.width = "100%", fig.asp = .4}
-d$rolling_sd <-
-  as.numeric(
-    zoo::rollapply(
-      as.numeric(d$s),
-      width = 30,
-      FUN = function(x)
-        var(x, na.rm = TRUE),
-      fill = NA,
-      align = "right",
-      partial = TRUE
-    )
-  )
-
-e <- subset(d, !is.na(s))
-ggplot(e, aes(x = t, y = rolling_sd)) +
-  geom_point() + 
-  geom_line(size = 1.2) + 
-  ylab("Mood (rolling sd)") + xlab("days") +
-  ylim(0, 10) + 
-  theme_bw() + theme(panel.grid.minor = element_blank())
-
-```
-
 
 ## Periodicity
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.
+Both the autocorrelation analysis and the moving average plot suggested periodicity in the EMA time series. Through Fourier Analysis, the exact nature of the periodicity can be analysed. Figure \@ref(fig:fig8i) shows the strength ('power') of various frequencies in the EMA series.  
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.
-
-```{r echo = FALSE, out.width = "100%", fig.asp = .4}
+```{r fig8i, echo = FALSE, out.width = "100%", fig.asp = .6, fig.cap = "periodogram of the EMA time series, revealing a one-day and a one-week period."}
 fa <- spec.pgram(ts(impute_interpolation(d$s), frequency = n_measurements_per_day), 
                  detrend = TRUE, demean = TRUE, 
                  main = "periodogram",  sub = "",
@@ -379,34 +236,5 @@ fa <- spec.pgram(ts(impute_interpolation(d$s), frequency = n_measurements_per_da
                  spans = NULL, taper = 0.01, ci = FALSE)
 ```
 
-[Circadian rhythm] Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
-
-```{r echo = FALSE}
-1 / fa$freq[order(fa$spec, decreasing = TRUE)][1:4]
-```
-
-## Discussion
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.
-
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra [@hoogendoorn2017_book].
+There are two peaks in the figure: at a frequency of 1 (day) and at a frequency of `r round(fa$freq[order(fa$spec, decreasing = TRUE)][1], 2)` (about one week). Mood ratings seem to follow a daily and a weekly pattern. The series is "circadian".
 
