text edits, update 11-05

--- a/book.bib
+++ b/book.bib
@@ -380,6 +380,18 @@
   pmid            = {27741022},
 }
 
+@misc{Ebner-Priemer2007,
+  author = {Ebner-Priemer, Ulrich W. and Kubiak, Thomas},
+  booktitle = {European Journal of Psychological Assessment},
+  doi = {10.1027/1015-5759.23.4.214},
+  isbn = {1015-5759},
+  issn = {10155759},
+  keywords = {Ambulatory assessment,Experience sampling,Hardware,Monitoring,Psychophysiology,Software},
+  title = {{Psychological and psychophysiological ambulatory monitoring: A review of hardware and software solutions}},
+  year = {2007}
+}
+
+
 @Article{EbnerPriemer2009,
   author   = {Ebner-Priemer, Ulrich W. and Trull, Timothy J.},
   title    = {{Ecological momentary assessment of mood disorders and mood dysregulation}},
@@ -580,6 +592,20 @@
   year = {2015},
   publisher = {CRC Press / Taylor and Francis Group}
 }
+
+
+@article{DeGeus1995,
+author = {de Geus, Eco J.C. and Willemsen, Gonneke H.M. and Klaver, Coert H.A.M. and van Doornen, Lorenz J.P.},
+doi = {10.1016/0301-0511(95)05137-6},
+isbn = {0301-0511 (Print)$\backslash$n0301-0511 (Linking)},
+issn = {03010511},
+journal = {Biological Psychology},
+keywords = {Cardiac vagal tone,Heart rate variability,Peak-to-trough,Spectral analysis,Thoracic impedance},
+pmid = {8608201},
+title = {{Ambulatory measurement of respiratory sinus arrhythmia and respiration rate}},
+year = {1995}
+}
+
 
 
 @incollection{Geus1996,
@@ -1433,6 +1459,20 @@ year = {1999}
   organization={Springer}
 }
 
+@article{VanBreda2018,
+  author = {van Breda, Ward and Bremer, Vincent and Becker, Dennis and Hoogendoorn,   Mark and Funk, Burkhardt and Ruwaard, Jeroen and Riper, Heleen},
+  doi = {10.1016/j.invent.2017.08.003},
+  isbn = {22147829 (ISSN)},
+  issn = {22147829},
+  journal = {Internet Interventions},
+  keywords = {Classification,Depression,E-health,Prediction,Therapy success},
+  pmid = {29862165},
+  title = {{Predicting therapy success for treatment as usual and blended treatment in the domain of depression}},
+  year = {2018}
+}
+
+
+
 @Article{VanderKrieke2015,
   author = {van der Krieke, Lian and Emerencia, C. Ando and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and de Jonge, Peter}, 
   title = {Ecological Momentary Assessments and Automated Time Series Analysis to Promote Tailored Health Care: A Proof-of-Principle Study},
@@ -1539,6 +1579,32 @@ year = {1999}
   publisher = {Elsevier},
   url       = {http://dx.doi.org/10.1016/j.psychres.2014.06.052}
 }
+
+
+@Article{VanSomeren2000,
+  author = {{Van Someren}, Eus J W},
+  journal = {Chronobiology International},
+  doi = {10.1081/CBI-100101046},
+  isbn = {0742-0528},
+  issn = {07420528},
+  keywords = {Aging,Circadian rhythms,Sleep},
+  pmid = {10841205},
+  title = {{Circadian rhythms and sleep in human aging}},
+  year = {2000}
+}
+
+
+@book{VanSomeren2011,
+  author = {{Van Someren}, Eus J W},
+  booktitle = {Handbook of Clinical Neurology},
+  doi = {10.1016/B978-0-444-52006-7.00004-6},
+  isbn = {9780444520067},
+  issn = {00729752},
+  pmid = {21056179},
+  title = {{Actigraphic monitoring of sleep and circadian rhythms}},
+  year = {2011}
+}
+
 
 @article{Versluis2016,
   title={Changing mental health and positive psychological well-being using ecological momentary interventions: A systematic review and meta-analysis},
@@ -1720,6 +1786,18 @@ year = {1999}
   year={2006},
   publisher={Springer Science \& Business Media}
 }
+
+@article{Willemsen1996,
+  author = {Willemsen, Gonneke H.M. and {De Geus}, Eco J.C. and Klaver, Coert H.A.M. and {Van Doornen}, Lorenz J.P. and Carroll, Douglas},
+  doi = {10.1111/j.1469-8986.1996.tb02122.x},
+  isbn = {0048-5772 (Print) 0048-5772 (Linking)},
+  issn = {00485772},
+  journal = {Psychophysiology},
+  pmid = {8851246},
+  title = {{Ambulatory monitoring of the impedance cardiogram}},
+  year = {1996}
+}
+
 
 
 @Book{xie2015,
