--- a/datamanagement.Rmd
+++ b/datamanagement.Rmd
@@ -100,7 +100,7 @@ In "data/raw/questmanager", we find two files: 1) "qm_baseline_2018_05_01.csv", 
 
 In "data/raw/movisens", we find one file: "ms_mood_2018_05_01.csv", containing the results of the EMA mood measurements of all participants, exported from the back-office of the MoviSens application. 
 
-Finally, in "data/raw/geneactive", we see a series of ".bin" files: binary data files that were exported from the GENEActive smart watches that were worn by the participants. Actigraphy data are high-volume data. These files are typically large (500GB per file is no exception). By using the .bin format, in which data is compressed, disk space is saved. Unlike the survey and EMA mood data, each data file in this directory contains data of one participant. In this case, there are even two files for one participant (APC009), perhaps because this participant started the study with a faulty device, which was swapped during the study. 
+Finally, in "data/raw/geneactive", we see a series of ".bin" files: binary data files that were exported from the GENEActive smart watches that were worn by the participants. Actigraphy data are high-volume data. These files are typically large (500MB is no exception). By using the .bin format, in which data is compressed, disk space is saved. Unlike the survey and EMA mood data, each data file in this directory contains data of one participant. In this case, there are even two files for one participant (APC009), perhaps because this participant started the study with a faulty device, which was swapped during the study. 
 
 In "data/raw", a final very important file is "key_file.csv". This file is important because it ties all the data together. It contains the unique identifiers that are assigned to the study participants in the various data collection systems. Ideally, of course, participants would be designated by a single ID in each data collection system. In practice, unfortunately, this is often not possible due to limitations of the systems used. As a result, researchers are forced to deal with the fact that participants are known under different ID's in each system. With a key-file, data can be tied together through scripts.
 
